--- a/app/swept_face/test/CMakeLists.txt
+++ b/app/swept_face/test/CMakeLists.txt
@@ -10,52 +10,76 @@ Please see the license file at the root of this repository, or at:
 
 ####################################################################
 
-message(STATUS "Adding swept_face_demo tests")
+if (Jali_DIR)
 
-# create a macro to run a distributed compare test
-macro(ADD_DISTRIB_TEST NP DIM NCELLS FIELDS REMAP_ORDER)
+  message(STATUS "Adding swept-face remap tests")
 
-  file(COPY swept_face_demo.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  # create a macro to compare actual values with canonical ones
+  macro(ADD_REMAP_TEST SUFFIX)
 
-  add_test(
-    NAME swept_face_demo_${NP}_${DIM}_${NCELLS}_${FIELDS}_${REMAP_ORDER}
-    COMMAND swept_face_demo.sh ${NP} ${DIM} ${NCELLS} ${FIELDS} ${REMAP_ORDER}
-  )
+    file(COPY "swept_${SUFFIX}.sh" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    file(COPY "gold/gold_${SUFFIX}.txt" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-  set_property(
-    TEST swept_face_demo_${NP}_${DIM}_${NCELLS}_${FIELDS}_${REMAP_ORDER}
-    PROPERTY ENVIRONMENT
-    TESTAPPDIR="${CMAKE_CURRENT_BINARY_DIR}/.."
-    CMPAPPDIR="${CMAKE_BINARY_DIR}/app/distributed_cmp"
-  )
+    add_test(NAME "test_swept-face_${SUFFIX}"
+             COMMAND "./swept_${SUFFIX}.sh")
 
-endmacro()
+    set_property(TEST "test_swept-face_${SUFFIX}"
+                 PROPERTY ENVIRONMENT
+                 TESTAPPDIR=${CMAKE_CURRENT_BINARY_DIR}/..
+                 CMPAPPDIR=${CMAKE_BINARY_DIR}/app/apptest_cmp
+                 RUN_COMMAND=${RUN_COMMAND})
 
-# add the tests
-# These tests don't test whether the remap is correct or reproduces a certain
-# function. They only test whether serial and parallel match. Hence higher 
-# order fields or remap order changes don't really test anything new.
-if (ENABLE_MPI AND Jali_DIR AND TANGRAM_FOUND)
+    set_property(TEST "test_swept-face_${SUFFIX}"
+                 PROPERTY PROCESSORS 1)
+  endmacro()
 
-  # 2D, constant field, order 2, vary number of processors
-  ADD_DISTRIB_TEST(2 2 5 42 2)
-  ADD_DISTRIB_TEST(4 2 5 42 2)
-  ADD_DISTRIB_TEST(8 2 5 42 2)
+  # create a macro to run a distributed compare test
+  macro(ADD_DISTRIB_TEST NP DIM NCELLS FIELDS REMAP_ORDER)
+    file(COPY swept_face_demo.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-  # 2D, linear field, order 2, vary number of processors
-  ADD_DISTRIB_TEST(2 2 5 x+2*y 2)
-  ADD_DISTRIB_TEST(4 2 5 x+2*y 2)
-  ADD_DISTRIB_TEST(8 2 5 x+2*y 2)
+    add_test(NAME swept_face_demo_${NP}_${DIM}_${NCELLS}_${FIELDS}_${REMAP_ORDER}
+             COMMAND swept_face_demo.sh ${NP} ${DIM} ${NCELLS} ${FIELDS} ${REMAP_ORDER})
 
-  # 3D, constant field, order 2, vary number of processors
-  ADD_DISTRIB_TEST(2 3 5 42 2)
-  ADD_DISTRIB_TEST(4 3 5 42 2)
-  ADD_DISTRIB_TEST(8 3 5 42 2)
+    set_property(TEST swept_face_demo_${NP}_${DIM}_${NCELLS}_${FIELDS}_${REMAP_ORDER}
+                 PROPERTY ENVIRONMENT
+                 TESTAPPDIR="${CMAKE_CURRENT_BINARY_DIR}/.."
+                 CMPAPPDIR="${CMAKE_BINARY_DIR}/app/distributed_cmp")
+  endmacro()
 
-  # 3D, linear field, order 2, vary number of processors
-  ADD_DISTRIB_TEST(2 3 5 x+2*y+3*z 2)
-  ADD_DISTRIB_TEST(4 3 5 x+2*y+3*z 2)
-  ADD_DISTRIB_TEST(8 3 5 x+2*y+3*z 2)
-endif()
+  # add the tests
+  ADD_REMAP_TEST("dim_2_field_const_order_1_simple")
+  ADD_REMAP_TEST("dim_2_field_const_order_1_vortex")
+  ADD_REMAP_TEST("dim_2_field_linear_order_1_simple")
+  ADD_REMAP_TEST("dim_2_field_linear_order_1_vortex")
+  ADD_REMAP_TEST("dim_2_field_linear_order_2_simple")
+  ADD_REMAP_TEST("dim_2_field_linear_order_2_vortex")
+  ADD_REMAP_TEST("dim_3_field_const_order_1_simple")
+  ADD_REMAP_TEST("dim_3_field_const_order_1_vortex")
+  ADD_REMAP_TEST("dim_3_field_linear_order_1_simple")
+  ADD_REMAP_TEST("dim_3_field_linear_order_1_vortex")
+  ADD_REMAP_TEST("dim_3_field_linear_order_2_simple")
+  ADD_REMAP_TEST("dim_3_field_linear_order_2_vortex")
 
+  if (ENABLE_MPI)
+    # 2D, constant field, order 2
+    ADD_DISTRIB_TEST(2 2 5 "42" 2)
+    ADD_DISTRIB_TEST(4 2 5 "42" 2)
+    ADD_DISTRIB_TEST(8 2 5 "42" 2)
 
+    # 2D, linear field, order 2
+    ADD_DISTRIB_TEST(2 2 5 "x+2y" 2)
+    ADD_DISTRIB_TEST(4 2 5 "x+2y" 2)
+    ADD_DISTRIB_TEST(8 2 5 "x+2y" 2)
+
+    # 3D, constant field, order 2
+    ADD_DISTRIB_TEST(2 3 5 "42" 2)
+    ADD_DISTRIB_TEST(4 3 5 "42" 2)
+    ADD_DISTRIB_TEST(8 3 5 "42" 2)
+
+    # 3D, linear field, order 2
+    ADD_DISTRIB_TEST(2 3 5 "x+2y+3z" 2)
+    ADD_DISTRIB_TEST(4 3 5 "x+2y+3z" 2)
+    ADD_DISTRIB_TEST(8 3 5 "x+2y+3z" 2)
+  endif()
+
+endif(Jali_DIR)
